🔧fix : 상세보기 조회 API 및 Swagger 수정
